@@ -162,10 +162,7 @@ sub end_element
 		}
 
 		# don't keep tmpfiles between items...
-		foreach( @{$self->{tmpfiles}} )
-		{
-			unlink( $_ );
-		}
+		@{$self->{tmpfiles}} = ();
 	}
 
 	if( $self->{depth} > 1 )
@@ -173,42 +170,22 @@ sub end_element
 		if( $self->{base64} )
 		{
 			$self->{base64} = 0;
-			my $tf = $self->{tmpfilecount}++;
-			my $tmpfile = "/tmp/epimport.$$.".time.".$tf.data";
-			$self->{tmpfile} = $tmpfile;
-			push @{$self->{tmpfiles}},$tmpfile;
-			open( TMP, ">$tmpfile" );
-			print TMP MIME::Base64::decode( join('',@{$self->{base64data}}) );
-			close TMP;
+			my $tmpfile = File::Temp->new;
+			push @{$self->{tmpfiles}}, $tmpfile;
+			print $tmpfile MIME::Base64::decode( join('',@{$self->{base64data}}) );
 
 			$self->{xmlcurrent}->appendChild( 
-				$self->{plugin}->{session}->make_text( $tmpfile ) );
+				$self->{plugin}->{session}->make_text( "$tmpfile" ) );
 			delete $self->{base64data};
 		}
 		elsif( $self->{href} )
 		{
-			if( $self->{href} =~ m/^file:\/\// )
-			{
-				if( $self->{plugin}->{session}->get_repository->get_conf( "enable_file_imports" ) )
-				{
-					my $href = $self->{href};
-					$href =~ s/^file:\/\///;
-					if( -e $href )
-					{
-						$self->{xmlcurrent}->appendChild( 
-							$self->{plugin}->{session}->make_text( $href ) );
-					}
-					else
-					{
-						$self->{plugin}->warning( "Could not see import file: ".$self->{href} );
-					}
-				}	
-				else
-				{
-					$self->{plugin}->warning( $self->{plugin}->{session}->phrase( "Plugin/Import/DefaultXML:file_imports_disabled" ) );
-				}
-			}
-			delete $self->{href};
+			my $href = delete $self->{href};
+			my $file = $self->{xmlcurrent}->parentNode;
+			$file->removeChild( $self->{xmlcurrent} );
+			my $url = $self->{plugin}->{session}->make_element( "url" );
+			$file->insertBefore( $url, $file->firstChild() );
+			$url->appendChild( $self->{plugin}->{session}->make_text( $href ) );
 		}
 		pop @{$self->{xmlstack}};
 		
@@ -261,16 +238,6 @@ sub start_element
 	}
 
 	$self->{depth}++;
-}
-
-sub DESTROY
-{
-	my( $self ) = @_;
-
-	foreach( @{$self->{tmpfiles}} )
-	{
-		unlink( $_ );
-	}
 }
 
 1;
